--- a/Gigya.Identity.Client/Pages/OP/login.cshtml
+++ b/Gigya.Identity.Client/Pages/OP/login.cshtml
@@ -1,7 +1,7 @@
 @page 
 
 @using Gigya.Identity.Client.Models
-@inject GigyaOP op
+@inject GigyaOP _op
 
 @{
     Layout = null;
@@ -14,7 +14,7 @@
 
 @Html.Hidden("afterLoginRedirect", @Url.PageLink("proxy"));
 
-<script src="@op.GigyaJS()"></script>
+<script src="@_op.GigyaJS()"></script>
 
 <script>
         gigya.socialize.addEventHandlers({
@@ -37,7 +37,7 @@
 
 <div class="text-center">
     <h1 class="display-4">OP Login Page</h1>
-    @op?.ApiKey
+    @_op?.ApiKey
 </div>
 
 <div id="container"></div>
